--- a/Лабораторная №7,10 Игра/Game/Game/Game.csproj
+++ b/Лабораторная №7,10 Игра/Game/Game/Game.csproj
@@ -57,12 +57,13 @@
     <Compile Include="BattleForm.xaml.cs">
       <DependentUpon>BattleForm.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Dice.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Players.cs" />
     <Compile Include="Registration.xaml.cs">
       <DependentUpon>Registration.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Round.cs" />
+    <Compile Include="Rounds.cs" />
     <Compile Include="ScoreTable.xaml.cs">
       <DependentUpon>ScoreTable.xaml</DependentUpon>
     </Compile>
