--- a/Лабораторная №7,10 Игра/Game/Game/Game.csproj
+++ b/Лабораторная №7,10 Игра/Game/Game/Game.csproj
@@ -59,6 +59,7 @@
     </Compile>
     <Compile Include="Player.cs" />
     <Compile Include="Players.cs" />
+    <Compile Include="Record.cs" />
     <Compile Include="Registration.xaml.cs">
       <DependentUpon>Registration.xaml</DependentUpon>
     </Compile>
